<resources>
    <string name="app_name">POS Kab Malang</string>

    <string name="title_activity_data_tersimpan">DataTersimpanActivity</string>
    <string name="title_app">Judul App</string>
    <string name="title_bantuan">Bantuan</string>
    <string name="title_bayar">Bayar</string>
    <string name="title_daftar_produk">Daftar Produk</string>
    <string name="title_data">Data</string>
    <string name="title_dic">Disc</string>
    <string name="title_diskon">Disc</string>
    <string name="title_diskripsi">Diskripsi</string>
    <string name="title_export">Export</string>
    <string name="title_foto">Foto</string>
    <string name="title_harga">Harga</string>
    <string name="title_home">Home</string>
    <string name="title_kembalian">Kembalian</string>
    <string name="title_master">Master</string>
    <string name="title_nama">Nama</string>
    <string name="title_nama_barang">Nama Barang</string>
    <string name="title_nama_item">Nama Item</string>
    <string name="title_no">No</string>
    <string name="title_no_trx">No. Trx</string>
    <string name="title_omzet">Omzet</string>
    <string name="title_produk">Edit Produk</string>
    <string name="title_proses">Proses</string>
    <string name="title_qty">Qty</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_sub_total">Sub Total</string>
    <string name="title_sistem">Sistem</string>
    <string name="title_simpan">Simpan</string>
    <string name="title_tambah">Tambah</string>
    <string name="title_tambah_data">Input Data</string>
    <string name="title_tambah_file">Tambah File</string>
    <string name="title_service_charge">Service Charge</string>
    <string name="title_tersimpan">Tersimpan</string>
    <string name="title_tgl">Tgl</string>
    <string name="title_theme">Edit Label dan Tema</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="title_total">Total</string>
    <string name="title_wifi">Wifi</string>

    <string name="snack_bar_undo">Undo</string>

    <!--Notif-->
    <string name="data_terhapus">Data Terhapus</string>
    <string name="tidak_terkoneksi_internet">Tidak ada koneksi internet !</string>
    <string name="silakan_cek_input_data">Silakan cek input data</string>
    <string name="empty_data">Empty Data</string>
    <string name="error_data">Error Data</string>
    <string name="error_get_data">Error Get Data</string>
    <string name="error_validating_email">Error validating email</string>
    <string name="error_validating_password">Error validating password</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="permission_denied">Permission has been denied by user</string>
    <string name="limit_file">File Melebihi 1MB</string>
    <string name="file_kosong">File Tidak Ditemukan</string>
    <string name="duplikat_file">Duplikat File</string>
    <string name="extensi_file_tidak_didukung">Ekstensi File Tidak Didukung</string>
    <string name="data_kosong">Data Kosong</string>

    <string name="judul">Judul</string>
    <string name="lanjut">Lanjut</string>
    <string name="kembali">Kembali</string>
    <string name="print">Print</string>
    <string name="text">Text</string>
    <string name="rp_0">Rp. 0</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_sym_percent">%</string>

    <!--theme example-->
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>

    <string-array name="theme_array">
        <item>Default</item>
        <item>Biru</item>
        <item>Hijau</item>
        <item>Kuning</item>
        <item>Merah</item>
        <item>Ungu</item>
    </string-array>

    <string name="batas_waktu_sinkron">Batas Waktu Sinkron</string>
    <string name="batal_transaksi">Batal Transaksi</string>
    <string name="bayar_tidak_valid">Bayar Tidak Valid</string>
    <string name="billing">Billing</string>
    <string name="bluetooth_tidak_didukung">Bluetooth tidak didukung</string>
    <string name="bluetooth_tidak_aktif">Bluetooth tidak aktif</string>
    <string name="bluetooth_perangkat_tidak_cocok">Bluetooth perangkat tidak cocok</string>
    <string name="ble_tidak_didukung">BLE tidak didukung</string>
    <string name="bulanan">Bulanan</string>
    <string name="cetak">Cetak</string>
    <string name="cetak_billing">Cetak Billing</string>
    <string name="disc_cln">Disc : </string>
    <string name="diskon_tidak_valid">Diskon Tidak Valid</string>
    <string name="dll">Dll</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="gambar">Gambar</string>
    <string name="harian">Harian</string>
    <string name="kamera">Kamera</string>
    <string name="kasir_cln">Kasir : </string>
    <string name="kirim_email">Kirim Email</string>
    <string name="kode_billing_cln">Kode Billing : </string>
    <string name="koneksi_terputus">Koneksi terputus</string>
    <string name="lain_lain">Lain-lain</string>
    <string name="login">Login</string>
    <string name="makanan">Makanan</string>
    <string name="masa_cln">Masa : </string>
    <string name="minuman">Minuman</string>
    <string name="nilai_pajak_cln">Nilai Pajak : </string>
    <string name="no_trx_cln">No. Trx : </string>
    <string name="omzet_cln">Omzet : </string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="sedang_menghubungkan">Sedang menghubungkan&#8230;</string>
    <string name="separator">Separator</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_bayar">Tanggal Bayar</string>
    <string name="tanggal_kosong">-- / -- / ----</string>
    <string name="tanggal_tidak_sesuai">Tanggal Tidak Sesuai</string>
    <string name="tgl_cln">Tgl : </string>
    <string name="terhubung_dengan_perangkat">Terhubung dengan perangkat</string>
    <string name="tidak_terhubung_ke_perangkat">Tidak terhubung ke perangkat</string>
    <string name="video">Video</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="transaksi_tersimpan">Transaksi Tersimpan</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="cari">Cari</string>
    <string name="pajak">Pajak</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_coba">CobaActivity</string>
    <string name="tab_text_1">Data Server</string>
    <string name="tab_text_2">Data Lokal</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="downloading">Downloading&#8230;</string>
    <string name="title_file_download">File is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="time_out">Waktu Habis</string>
    <string name="title_nomor_seri">Nomor Seri</string>
</resources>
