<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
        <item android:id="@+id/action_menu_lanjut"
            app:showAsAction="always"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/lanjut"/>
        <item android:id="@+id/action_menu_cari"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/cari"/>
        <item android:id="@+id/action_menu_bantuan"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_help"
            android:title="@string/title_bantuan"/>
</menu>
