<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4">

    <LinearLayout
        android:padding="@dimen/_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvNumItem"
            android:layout_width="@dimen/_36"
            android:layout_height="@dimen/_36"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:background="@drawable/circle_green_bg"
            android:layout_marginStart="@dimen/_8"
            android:layout_marginLeft="@dimen/_8"
            android:layout_marginEnd="@dimen/_16"
            android:layout_marginRight="@dimen/_8"
            android:textSize="@dimen/f_10"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_4">

            <TextView
                android:id="@+id/tvTitleTgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toLeftOf="@id/tvTgl"
                app:layout_constraintBottom_toBottomOf="@id/tvTgl"
                android:layout_marginEnd="@dimen/_8"
                android:text="@string/tanggal"
                android:fontFamily="@font/nunitosansregular"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvTgl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/tanggal_kosong"
                android:textSize="@dimen/f_10"
                android:fontFamily="@font/nunitosansregular"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/tvTitleOmzet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvOmzet"
                android:paddingBottom="@dimen/_2"
                android:text="@string/omzet_cln"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvOmzet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTgl"
                app:layout_constraintLeft_toRightOf="@id/tvTitleOmzet"
                android:layout_marginStart="@dimen/_4"
                android:text="@string/rp_0"
                android:textStyle="bold"
                android:textSize="@dimen/f_18"
                android:fontFamily="@font/nunitosansregular"
                android:textColor="@android:color/holo_orange_dark"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>