<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    style="?pageBackground"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/rlTitleApp"
            style="?whiteBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16">

            <TextView
                android:id="@+id/tvCredentials"
                style="?textSubheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosansregular"
                android:text="@string/title_service_charge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCredentials"
                android:gravity="end"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etLabel"
                    style="?textRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosansregular"
                    android:hint="@string/text"
                    android:inputType="number"
                    android:gravity="end"
                    android:lines="1" />

                <TextView
                    android:id="@+id/tvLambangPersen"
                    style="?textRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosansregular"
                    android:hint="%"
                    android:textStyle="bold"/>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/bSimpan"
            style="?button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTitleApp"
            android:layout_marginTop="@dimen/_16"
            android:fontFamily="@font/nunitosansregular"
            android:text="@string/title_simpan"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
