<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvNumItem"
            android:layout_width="@dimen/_36"
            android:layout_height="@dimen/_36"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_8"
            android:layout_marginEnd="@dimen/_16"
            android:background="@drawable/circle_green_bg"
            android:gravity="center"
            android:textColor="@android:color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMastahCl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masa_cln"
                        android:textSize="@dimen/f_10" />

                    <TextView
                        android:id="@+id/tvMastah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        android:layout_marginStart="@dimen/_4"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNilaiPajakCl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilai_pajak_cln"
                        android:textSize="@dimen/f_10" />

                    <TextView
                        android:id="@+id/tvNilaiPajak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        android:layout_marginStart="@dimen/_4"
                        android:textColor="@android:color/holo_orange_dark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvBillingCl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kode_billing_cln"
                        android:textSize="@dimen/f_10" />

                    <TextView
                        android:id="@+id/tvBilling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text"
                        android:layout_marginStart="@dimen/_4"
                        android:textColor="@android:color/holo_orange_dark" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTglBayarCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8"
                android:text="@string/tanggal_bayar"
                android:textSize="@dimen/f_10"
                app:layout_constraintRight_toLeftOf="@id/tvTglBayar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTglBayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8"
                android:textColor="@color/colorAccent"
                android:text="@string/tanggal_kosong"
                android:textSize="@dimen/f_10"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>