<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvNumItem"
            android:layout_width="@dimen/_36"
            android:layout_height="@dimen/_36"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:background="@drawable/circle_green_bg"
            android:layout_marginStart="@dimen/_8"
            android:layout_marginLeft="@dimen/_8"
            android:layout_marginEnd="@dimen/_16"
            android:layout_marginRight="@dimen/_8"
            android:textSize="@dimen/f_10"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvTitleNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvNama"
                android:text="@string/no_trx_cln"
                android:fontFamily="@font/nunitosansregular"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4"
                app:layout_constraintLeft_toRightOf="@id/tvTitleNama"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvHarga"
                android:text="@string/text"
                android:fontFamily="@font/nunitosansregular"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/tvTitleDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_omzet"
                android:textSize="@dimen/f_10"
                android:layout_marginEnd="@dimen/_8"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tvDisc"
                app:layout_constraintBottom_toTopOf="@+id/tvTotal"/>

            <TextView
                android:visibility="invisible"
                android:id="@+id/tvDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="@dimen/_8"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitleHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tvHarga"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/_4"
                android:text="@string/disc_cln"
                android:fontFamily="@font/nunitosansregular"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintLeft_toRightOf="@id/tvTitleHarga"
                app:layout_constraintRight_toLeftOf="@id/tvTotal"
                app:layout_constraintTop_toBottomOf="@id/tvNama"
                android:gravity="start"
                android:text="@string/text"
                android:textColor="@android:color/holo_orange_dark"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/f_18"
                android:text="@string/rp_0"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_marginEnd="@dimen/_8"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDisc"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/tvTitleQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvQty"
                android:paddingBottom="@dimen/_2"
                android:text="@string/tgl_cln"
                android:fontFamily="@font/nunitosansregular"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvKasir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintLeft_toRightOf="@id/tvTitleKasir"
                app:layout_constraintTop_toBottomOf="@id/tvHarga"
                android:text="@string/text"
                android:textColor="@android:color/holo_orange_dark"/>

            <TextView
                android:id="@+id/tvTitleKasir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvKasir"
                android:paddingBottom="@dimen/_2"
                android:text="@string/kasir_cln"
                android:fontFamily="@font/nunitosansregular"
                android:textSize="@dimen/f_10"/>

            <TextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4"
                android:fontFamily="@font/nunitosansregular"
                app:layout_constraintLeft_toRightOf="@id/tvTitleQty"
                app:layout_constraintTop_toBottomOf="@id/tvKasir"
                android:text="@string/text"
                android:textColor="@android:color/holo_orange_dark"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>